RESOLVED FIXED180436
[Win64] Compile error in testmasm.cpp.
https://bugs.webkit.org/show_bug.cgi?id=180436
Summary [Win64] Compile error in testmasm.cpp.
Per Arne Vollan
Reported 2017-12-05 12:14:13 PST
Source\JavaScriptCore\assembler\testmasm.cpp(186): warning C4334: '<<': result of 32-bit shift implicitly converted to 64 bits (was 64-bit shift intended?)
Attachments
Patch (1.38 KB, patch)
2017-12-05 12:22 PST, Per Arne Vollan
mark.lam: review+
Per Arne Vollan
Comment 1 2017-12-05 12:22:10 PST
Mark Lam
Comment 2 2017-12-05 13:06:55 PST
Comment on attachment 328482 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=328482&action=review r=me with fix. > Source/JavaScriptCore/assembler/testmasm.cpp:186 > + }), pointer + offset + (1ll << static_cast<int>(scale)) * length); let's make it static_cast<size_t>(1). I think that is what we really want.
Per Arne Vollan
Comment 3 2017-12-05 13:16:55 PST
(In reply to Mark Lam from comment #2) > Comment on attachment 328482 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=328482&action=review > > r=me with fix. > > > Source/JavaScriptCore/assembler/testmasm.cpp:186 > > + }), pointer + offset + (1ll << static_cast<int>(scale)) * length); > > let's make it static_cast<size_t>(1). I think that is what we really want. Thanks for reviewing! I will update before landing.
Per Arne Vollan
Comment 4 2017-12-05 13:42:06 PST
Radar WebKit Bug Importer
Comment 5 2017-12-05 13:43:17 PST
Note You need to log in before you can comment on or make changes to this bug.