[Win64] Compile error in testmasm.cpp. https://bugs.webkit.org/show_bug.cgi?id=180436

Reviewed by Mark Lam.

Fix MSVC warning (32-bit shift implicitly converted to 64 bits).

* assembler/testmasm.cpp:
(JSC::testGetEffectiveAddress):



Canonical link: https://commits.webkit.org/196372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225536 268f45cc-cd09-0410-ab3c-d52691b4dbfc